BIS-1961: Connection to openBIS